[package]
name = "rusend"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
resend-rs = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
anyhow = "1.0"
